c1m1 added drinks machines behind the check-in desk by the end saferoom c1m1 adjusted clipping on top of photocopier in saferoom to allow standing on it while still preventing getting stuck c1m2 adjusted added bus after the event c1m2 adjusted los blockers for props after the event c1m2 removed added cs weapon replacements in the gun store, as there are spawns under the stairs c1m2 reduced the intensity of the event c1m2 adjusted clipping on top of photocopier in saferoom to allow standing on it while still preventing getting stuck c1m2 prevented stuck spot on top of photocopier in the save 4 less store c1m2 removed an angled clip on the tent near the start of the map that could block hittables c1m3 added an ammo pile before the button at the end of the event c1m3 reworked some props blocking the route to the end saferoom, replaced jimmy gibbs banner with fences c1m3 re-organized ordering of map changes (no change) c2m2 adjusted color of sign on game hut by the peanut gallery c2m3 fixed only the regular uzi spawning at the tunnel of love exit c3m1 prevented getting stuck on top of the photocopier in the store by the event c3m1 prevented a stuck spot on the radiator in the store by the event c4m1/4 added an ammo pile on porch by the raised up house at the end of the street c4m1/5 replaced some angled clips around the burger tank that could block hittables c4m1/4/5 replaced and improved valve's commentary blockers on trees and shrubs c5m1 added infected ladders to climb over the wall at the restaurant exit c5m2 added an ammo pile to the ceda trailer c5m3 adjusted clip on fence by the saferoom c5m3 added a hittable car behind the fence outside the saferoom c5m4 solidified some non-solid window props on various roofs c5m4 blocked stuck spots on out of bounds roofs by the final street c8m3 prevented a stuck spot on a desk in the warehouse offices c11m3 fixed an incorrectly placed LOS blocker on a pickup truck c11m3 optimized fix for props being invisible c11m4 tweaked ma

--- a/cfg/stripper/maps/c10m4_mainstreet.cfg
+++ b/cfg/stripper/maps/c10m4_mainstreet.cfg
@@ -1032,7 +1032,7 @@ add:
 	"OnMapSpawn" "anv_mapfixes_meticulous_funcinfclip02,Kill,,15,-1"
 	; --- Clip on added delivery van
 	"OnMapSpawn" "anv_mapfixes_losblocker_deliveryclip,Kill,,15,-1"
-	; --- Clip on truck after florist (can be re-enabled if angled blockers get fixed)
+	; --- Clip on truck after florist (can be re-enabled if angled blockers get fixed) (#34)
 	"OnMapSpawn" "anv_mapfixes_cliprework_trucknuke,Kill,,15,-1"
 	; --- Clip above office roof
 	"OnMapSpawn" "anv_mapfixes_meticulous_funcinfclip03,Kill,,15,-1"
