--- a/cfg/stripper/maps/c11m3_garage.cfg
+++ b/cfg/stripper/maps/c11m3_garage.cfg
@@ -318,7 +318,7 @@ add:
 }
 {
 	"classname" "func_brush"
-	"origin" "-3985 603 18"
+	"origin" "-1260 3802 18"
 	"targetname" "losblock_pickup_outside"
 }
 ; --- Remove 2 hittable cars on the lower floor of the parking lot
@@ -667,7 +667,11 @@ add:
 	"model" "models/props_c17/substation_transformer01b.mdl"
 	"solid" "0"
 	"disableshadows" "1"
+	"mincpulevel" "1"
 	"maxcpulevel" "1"
+	"fadescale" "1"
+	"fademindist" "500"
+	"fademaxdist" "1500"
 }
 {
 	"classname" "prop_dynamic"
@@ -676,7 +680,11 @@ add:
 	"model" "models/props_c17/substation_transformer01b.mdl"
 	"solid" "0"
 	"disableshadows" "1"
+	"mincpulevel" "1"
 	"maxcpulevel" "1"
+	"fadescale" "1"
+	"fademindist" "500"
+	"fademaxdist" "1500"
 }
 {
 	"classname" "prop_dynamic"
@@ -685,7 +693,11 @@ add:
 	"model" "models/props_c17/substation_transformer01b.mdl"
 	"solid" "0"
 	"disableshadows" "1"
+	"mincpulevel" "1"
 	"maxcpulevel" "1"
+	"fadescale" "1"
+	"fademindist" "500"
+	"fademaxdist" "1500"
 }
 {
 	"classname" "prop_dynamic"
@@ -694,7 +706,11 @@ add:
 	"model" "models/props_c17/substation_transformer01a.mdl"
 	"solid" "0"
 	"disableshadows" "1"
+	"mincpulevel" "1"
 	"maxcpulevel" "1"
+	"fadescale" "1"
+	"fademindist" "500"
+	"fademaxdist" "1500"
 }
 {
 	"classname" "prop_dynamic"
@@ -703,7 +719,11 @@ add:
 	"model" "models/props_c17/substation_transformer01b.mdl"
 	"solid" "0"
 	"disableshadows" "1"
+	"mincpulevel" "1"
 	"maxcpulevel" "1"
+	"fadescale" "1"
+	"fademindist" "500"
+	"fademaxdist" "1500"
 }
 ; --- Lamp posts on garage roof
 {
@@ -713,7 +733,11 @@ add:
 	"model" "models/props_c17/lamppost03a_off.mdl"
 	"solid" "0"
 	"disableshadows" "1"
+	"mincpulevel" "1"
 	"maxcpulevel" "1"
+	"fadescale" "1"
+	"fademindist" "500"
+	"fademaxdist" "1500"
 }
 {
 	"classname" "prop_dynamic"
@@ -722,7 +746,11 @@ add:
 	"model" "models/props_c17/lamppost03a_off.mdl"
 	"solid" "0"
 	"disableshadows" "1"
+	"mincpulevel" "1"
 	"maxcpulevel" "1"
+	"fadescale" "1"
+	"fademindist" "500"
+	"fademaxdist" "1500"
 }
 {
 	"classname" "prop_dynamic"
@@ -731,7 +759,11 @@ add:
 	"model" "models/props_c17/lamppost03a_off.mdl"
 	"solid" "0"
 	"disableshadows" "1"
+	"mincpulevel" "1"
 	"maxcpulevel" "1"
+	"fadescale" "1"
+	"fademindist" "500"
+	"fademaxdist" "1500"
 }
 {
 	"classname" "prop_dynamic"
@@ -740,7 +772,11 @@ add:
 	"model" "models/props_c17/lamppost03a_off.mdl"
 	"solid" "0"
 	"disableshadows" "1"
+	"mincpulevel" "1"
 	"maxcpulevel" "1"
+	"fadescale" "1"
+	"fademindist" "500"
+	"fademaxdist" "1500"
 }
 {
 	"classname" "prop_dynamic"
@@ -749,7 +785,11 @@ add:
 	"model" "models/props_c17/lamppost03a_off.mdl"
 	"solid" "0"
 	"disableshadows" "1"
+	"mincpulevel" "1"
 	"maxcpulevel" "1"
+	"fadescale" "1"
+	"fademindist" "500"
+	"fademaxdist" "1500"
 }
 {
 	"classname" "prop_dynamic"
@@ -758,7 +798,11 @@ add:
 	"model" "models/props_c17/lamppost03a_off.mdl"
 	"solid" "0"
 	"disableshadows" "1"
+	"mincpulevel" "1"
 	"maxcpulevel" "1"
+	"fadescale" "1"
+	"fademindist" "500"
+	"fademaxdist" "1500"
 }
 {
 	"classname" "prop_dynamic"
@@ -767,7 +811,11 @@ add:
 	"model" "models/props_c17/lamppost03a_off.mdl"
 	"solid" "0"
 	"disableshadows" "1"
+	"mincpulevel" "1"
 	"maxcpulevel" "1"
+	"fadescale" "1"
+	"fademindist" "500"
+	"fademaxdist" "1500"
 }
 {
 	"classname" "prop_dynamic"
@@ -776,7 +824,11 @@ add:
 	"model" "models/props_c17/lamppost03a_off.mdl"
 	"solid" "0"
 	"disableshadows" "1"
+	"mincpulevel" "1"
 	"maxcpulevel" "1"
+	"fadescale" "1"
+	"fademindist" "500"
+	"fademaxdist" "1500"
 }
 {
 	"classname" "prop_dynamic"
@@ -785,7 +837,11 @@ add:
 	"model" "models/props_c17/lamppost03a_off.mdl"
 	"solid" "0"
 	"disableshadows" "1"
+	"mincpulevel" "1"
 	"maxcpulevel" "1"
+	"fadescale" "1"
+	"fademindist" "500"
+	"fademaxdist" "1500"
 }
 {
 	"classname" "prop_dynamic"
@@ -794,7 +850,11 @@ add:
 	"model" "models/props_c17/lamppost03a_off.mdl"
 	"solid" "0"
 	"disableshadows" "1"
+	"mincpulevel" "1"
 	"maxcpulevel" "1"
+	"fadescale" "1"
+	"fademindist" "500"
+	"fademaxdist" "1500"
 }
 {
 	"classname" "prop_dynamic"
@@ -803,7 +863,11 @@ add:
 	"model" "models/props_c17/lamppost03a_off.mdl"
 	"solid" "0"
 	"disableshadows" "1"
+	"mincpulevel" "1"
 	"maxcpulevel" "1"
+	"fadescale" "1"
+	"fademindist" "500"
+	"fademaxdist" "1500"
 }
 ; --- AC units on various roofs
 {
@@ -813,7 +877,11 @@ add:
 	"model" "models/props_rooftop/acvent04.mdl"
 	"solid" "0"
 	"disableshadows" "1"
+	"mincpulevel" "1"
 	"maxcpulevel" "1"
+	"fadescale" "1"
+	"fademindist" "500"
+	"fademaxdist" "1500"
 }
 {
 	"classname" "prop_dynamic"
@@ -822,7 +890,11 @@ add:
 	"model" "models/props_rooftop/acvent04.mdl"
 	"solid" "0"
 	"disableshadows" "1"
+	"mincpulevel" "1"
 	"maxcpulevel" "1"
+	"fadescale" "1"
+	"fademindist" "500"
+	"fademaxdist" "1500"
 }
 {
 	"classname" "prop_dynamic"
@@ -831,7 +903,11 @@ add:
 	"model" "models/props_rooftop/acvent01.mdl"
 	"solid" "0"
 	"disableshadows" "1"
+	"mincpulevel" "1"
 	"maxcpulevel" "1"
+	"fadescale" "1"
+	"fademindist" "500"
+	"fademaxdist" "1500"
 }
 {
 	"classname" "prop_dynamic"
@@ -840,7 +916,11 @@ add:
 	"model" "models/props_rooftop/acvent01.mdl"
 	"solid" "0"
 	"disableshadows" "1"
+	"mincpulevel" "1"
 	"maxcpulevel" "1"
+	"fadescale" "1"
+	"fademindist" "500"
+	"fademaxdist" "1500"
 }
 {
 	"classname" "prop_dynamic"
@@ -849,7 +929,11 @@ add:
 	"model" "models/props_rooftop/acvent01.mdl"
 	"solid" "0"
 	"disableshadows" "1"
+	"mincpulevel" "1"
 	"maxcpulevel" "1"
+	"fadescale" "1"
+	"fademindist" "500"
+	"fademaxdist" "1500"
 }
 {
 	"classname" "prop_dynamic"
@@ -858,7 +942,11 @@ add:
 	"model" "models/props_rooftop/acvent01.mdl"
 	"solid" "0"
 	"disableshadows" "1"
+	"mincpulevel" "1"
 	"maxcpulevel" "1"
+	"fadescale" "1"
+	"fademindist" "500"
+	"fademaxdist" "1500"
 }
 {
 	"classname" "prop_dynamic"
@@ -867,7 +955,11 @@ add:
 	"model" "models/props_rooftop/acvent01.mdl"
 	"solid" "0"
 	"disableshadows" "1"
+	"mincpulevel" "1"
 	"maxcpulevel" "1"
+	"fadescale" "1"
+	"fademindist" "500"
+	"fademaxdist" "1500"
 }
 {
 	"classname" "prop_dynamic"
@@ -876,7 +968,11 @@ add:
 	"model" "models/props_rooftop/acvent01.mdl"
 	"solid" "0"
 	"disableshadows" "1"
+	"mincpulevel" "1"
 	"maxcpulevel" "1"
+	"fadescale" "1"
+	"fademindist" "500"
+	"fademaxdist" "1500"
 }
 ; --- Water tower
 {
@@ -886,7 +982,11 @@ add:
 	"model" "models/props_street/watertower01.mdl"
 	"solid" "0"
 	"disableshadows" "1"
+	"mincpulevel" "1"
 	"maxcpulevel" "1"
+	"fadescale" "1"
+	"fademindist" "500"
+	"fademaxdist" "1500"
 }
 ; --- Make the door by the end saferoom start open the opposite way
 modify:
