--- a/cfg/stripper/maps/c11m5_runway.cfg
+++ b/cfg/stripper/maps/c11m5_runway.cfg
@@ -392,7 +392,7 @@ filter:
 add:
 {
 	"classname" "logic_auto"
-	; --- Angled survivor clip over boarding gate (can be re-enabled if angled blockers get fixed)
+	; --- Angled survivor clip over boarding gate (can be re-enabled if angled blockers get fixed) (#34)
 	"OnMapSpawn" "anv_mapfixes_nav_skybridge,Kill,,15,-1"
 }
 
