--- a/cfg/stripper/maps/c1m1_hotel.cfg
+++ b/cfg/stripper/maps/c1m1_hotel.cfg
@@ -433,12 +433,12 @@ add:
 	"initialstate" "1"
 	"BlockType" "0"
 }
-; --- Block getting stuck on top of the photocopier in the saferoom
+; --- Prevent getting stuck on top of the photocopier in the saferoom
 {
 	"classname" "env_physics_blocker"
-	"origin" "2175 4543 1248"
-	"mins" "-23 -17 -64"
-	"maxs" "23 17 64"
+	"origin" "2175 4543 1213"
+	"mins" "-23 -17 -30"
+	"maxs" "23 17 30"
 	"initialstate" "1"
 	"BlockType" "0"
 }
@@ -591,6 +591,23 @@ add:
 	"classname" "func_brush"
 	"origin" "-378 5337 1188"
 	"targetname" "anv_mapfixes_losfix_snack_hall"
+}
+; --- Drinks machines behind the check-in desk by the end saferoom
+{
+	"classname" "prop_dynamic"
+	"origin" "546 4942 1184"
+	"angles" "0 90 0"
+	"model" "models/props_office/vending_machine01.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "524 4906 1184"
+	"angles" "0 0 0"
+	"model" "models/props_interiors/water_cooler.mdl"
+	"solid" "6"
+	"disableshadows" "1"
 }
 ; --- Dressers by the end saferoom
 {
