--- a/cfg/stripper/maps/c1m2_streets.cfg
+++ b/cfg/stripper/maps/c1m2_streets.cfg
@@ -3,6 +3,22 @@
 ; ==          DIRECTOR & EVENT MODIFICATION          ==
 ; ==       Modify director behaviour and events      ==
 ; =====================================================
+; --- Load a modified version of the event script
+modify:
+{
+	match:
+	{
+		"targetname" "store_alarm_relay"
+	}
+	delete:
+	{
+		"OnTrigger" "directorBeginScriptC1_gunshop_onslaught0.1-1"
+	}
+	insert:
+	{
+		"OnTrigger" "director,BeginScript,c1_gunshop_onslaught_rework,0.1,-1"
+	}
+}
 ; --- Move the cola into a new location near the middle of the store
 modify:
 {
@@ -83,15 +99,6 @@ add:
 	"fademindist" "-1"
 	"disablereceiveshadows" "0"
 }
-; --- Crate as an alternative to climbing the stairs at the gun store exit
-{
-	"classname" "prop_dynamic"
-	"origin" "-5915 -2667 442"
-	"angles" "0 90 -8.5"
-	"model" "models/props_crates/static_crate_40.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-}
 ; --- Enable the 2 alarm cars after the event
 modify:
 {
@@ -126,85 +133,9 @@ modify:
 ; ==           PILL / ITEM / WEAPON SPAWNS           ==
 ; ==   Remove or change pill, item & weapon spawns   ==
 ; =====================================================
-; --- Replace a silenced SMGs in the gun store with an MP5
-modify:
-{
-	match:
-	{
-		"hammerid" "1846229"
-	}
-	replace:
-	{
-		"classname" "weapon_spawn"
-	}
-	insert:
-	{
-		"weapon_selection" "weapon_smg_mp5"
-	}
-}
-; --- Replace a desert rifle in the gun store with an SG552
-{
-	match:
-	{
-		"hammerid" "1864980"
-	}
-	replace:
-	{
-		"classname" "weapon_spawn"
-	}
-	insert:
-	{
-		"weapon_selection" "weapon_rifle_sg552"
-	}
-}
-; --- Replace the lower T2 sniper spawns in the gun store with CS snipers
-modify:
-{
-	match:
-	{
-		"hammerid" "1845975"
-	}
-	replace:
-	{
-		"classname" "weapon_spawn"
-	}
-	insert:
-	{
-		"weapon_selection" "weapon_sniper_scout"
-	}
-}
-{
-	match:
-	{
-		"hammerid" "1865872"
-	}
-	replace:
-	{
-		"classname" "weapon_spawn"
-	}
-	insert:
-	{
-		"weapon_selection" "weapon_sniper_scout"
-	}
-}
-{
-	match:
-	{
-		"hammerid" "1865762"
-	}
-	replace:
-	{
-		"classname" "weapon_spawn"
-	}
-	insert:
-	{
-		"weapon_selection" "weapon_sniper_awp"
-	}
-}
-
-; --- Add the alternative skins for various weapons to the gun store
-; --- TLS already added the tier 1 shotgun variants
+; --- Add the alternative skins for various weapons to the gun store, T1 shotgun variants are already present
 ; --- Silenced SMG
+modify:
 {
 	match:
 	{
@@ -443,18 +374,18 @@ add:
 	"initialstate" "1"
 	"BlockType" "1"
 }
-; --- Block standing on the edge of the tent by the generator
-{
-	"classname" "env_physics_blocker"
-	"origin" "1610 2682 1073"
-	"angles" "0 353.5 0"
-	"mins" "-3 -190.5 -399.5"
-	"maxs" "3 190.5 399.5"
-	"boxmins" "-3 -190.5 -399.5"
-	"boxmaxs" "3 190.5 399.5"
-	"initialstate" "1"
-	"BlockType" "1"
-}
+; --- Block standing on the edge of the tent by the generator - Removed until angled clip bug is fixed (#34)
+;{
+;	"classname" "env_physics_blocker"
+;	"origin" "1610 2682 1073"
+;	"angles" "0 353.5 0"
+;	"mins" "-3 -190.5 -399.5"
+;	"maxs" "3 190.5 399.5"
+;	"boxmins" "-3 -190.5 -399.5"
+;	"boxmaxs" "3 190.5 399.5"
+;	"initialstate" "1"
+;	"BlockType" "1"
+;}
 ; --- Block survivors from standing on the hedges on the first road
 {
 	"classname" "env_physics_blocker"
@@ -632,12 +563,21 @@ add:
 	"initialstate" "1"
 	"BlockType" "0"
 }
-; --- Block getting stuck on top of the photocopier in the saferoom
+; --- Prevent getting stuck on top of the photocopier in the saferoom
 {
 	"classname" "env_physics_blocker"
-	"origin" "2543 5199 512"
-	"mins" "-24 -17 -64"
-	"maxs" "24 17 64"
+	"origin" "2543 5199 477"
+	"mins" "-23 -17 -30"
+	"maxs" "23 17 30"
+	"initialstate" "1"
+	"BlockType" "0"
+}
+; --- Prevent getting stuck on top of the photocopier in the Save 4 Less store
+{
+	"classname" "env_physics_blocker"
+	"origin" "-6673 -2707 421"
+	"mins" "-17 -24 -30"
+	"maxs" "17 24 30"
 	"initialstate" "1"
 	"BlockType" "0"
 }
@@ -1055,80 +995,70 @@ add:
 	"origin" "-4825 -408 386"
 	"targetname" "billboard_lighting"
 }
+; --- Crate as an alternative to climbing the stairs at the gun store exit
+{
+	"classname" "prop_dynamic"
+	"origin" "-5915 -2667 442"
+	"angles" "0 90 -8.5"
+	"model" "models/props_crates/static_crate_40.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
 ; --- Crashed bus after the event
 {
 	"classname" "prop_dynamic"
-	"origin" "-7869 -588 384"
-	"angles" "0 258.5 0"
+	"origin" "-7980 -608 384"
+	"angles" "0 270 0"
 	"model" "models/props_vehicles/bus01_2.mdl"
 	"solid" "6"
 	"disableshadows" "1"
 }
 {
 	"classname" "env_physics_blocker"
-	"origin" "-7867 -590 989"
-	"angles" "0 258.5"
-	"mins" "-238 -54.5 -483.5"
-	"maxs" "238 54.5 483.5"
-	"boxmins" "-238 -54.5 -483.5"
-	"boxmaxs" "238 54.5 483.5"
+	"origin" "-7980 -611 928"
+	"mins" "-47 -236 -544"
+	"maxs" "47 236 544"
 	"initialstate" "1"
 	"BlockType" "1"
-}
-{
-	"classname" "env_physics_blocker"
-	"origin" "-7911 -811 976"
-	"angles" "0 258.5"
-	"mins" "-14 -60 -496"
-	"maxs" "14 60 496"
-	"boxmins" "-14 -60 -496"
-	"boxmaxs" "14 60 496"
-	"initialstate" "1"
-	"BlockType" "1"
-}
-{
-	"classname" "prop_dynamic"
-	"origin" "-7989 -836 384"
-	"angles" "0 260.5 0"
-	"model" "models/props_fortifications/concrete_block001_128_reference.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-}
-{
-	"classname" "prop_dynamic"
-	"origin" "-7855 -848 385"
-	"angles" "10.4784 277.566 0.464704"
-	"model" "models/props_fortifications/concrete_block001_128_reference.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-}
-{
-	"classname" "info_particle_system"
-	"origin" "-7917 -831 387"
-	"angles" "0 258.5 0"
-	"effect_name" "generator_smoke"
-	"start_active" "1"
-	"cpoint7_parent" "0"
-	"cpoint6_parent" "0"
-	"cpoint5_parent" "0"
-	"cpoint4_parent" "0"
-	"cpoint3_parent" "0"
-	"cpoint2_parent" "0"
-	"cpoint1_parent" "0"
 }
 ; --- Block LOS under bus
 {
 	"classname" "logic_auto"
-	"OnMapSpawn" "anv_mapfixes_losfix_crashed_bus,AddOutput,mins -3 -205 -10,0,-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_crashed_bus,AddOutput,maxs 3 205 10,0,-1"
+	"OnMapSpawn" "anv_mapfixes_losfix_crashed_bus,AddOutput,mins -1 -220 -12,0,-1"
+	"OnMapSpawn" "anv_mapfixes_losfix_crashed_bus,AddOutput,maxs 1 220 12,0,-1"
 	"OnMapSpawn" "anv_mapfixes_losfix_crashed_bus,AddOutput,solid 2,0,-1"
 }
 {
 	"classname" "func_brush"
-	"origin" "-7871 -604 392"
+	"origin" "-7980 -612 394"
 	"targetname" "anv_mapfixes_losfix_crashed_bus"
 }
-; --- Props for spawns by the end saferoom
+; --- Concrete blocks after the event
+{
+	"classname" "prop_dynamic"
+	"origin" "-7723 -836 384"
+	"angles" "0 30 0"
+	"model" "models/props_fortifications/concrete_block001_128_reference.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-7723 -836 424"
+	"angles" "0 30 0"
+	"model" "models/props_fortifications/concrete_block001_128_reference.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-7723 -836 464"
+	"angles" "0 30 0"
+	"model" "models/props_fortifications/concrete_block001_128_reference.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+; --- Additional bus by the first tent after the event
 {
 	"classname" "prop_dynamic"
 	"origin" "-8664 -1376 384"
@@ -1140,8 +1070,8 @@ add:
 ; --- Block LOS under bus
 {
 	"classname" "logic_auto"
-	"OnMapSpawn" "anv_mapfixes_losfix_extra_bus,AddOutput,mins -3 -205 -10,0,-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_extra_bus,AddOutput,maxs 3 205 10,0,-1"
+	"OnMapSpawn" "anv_mapfixes_losfix_extra_bus,AddOutput,mins -1 -205 -10,0,-1"
+	"OnMapSpawn" "anv_mapfixes_losfix_extra_bus,AddOutput,maxs 1 205 10,0,-1"
 	"OnMapSpawn" "anv_mapfixes_losfix_extra_bus,AddOutput,solid 2,0,-1"
 }
 {
@@ -1149,6 +1079,7 @@ add:
 	"origin" "-8666 -1397 392"
 	"targetname" "anv_mapfixes_losfix_extra_bus"
 }
+; --- Hedges in the middle of the parking lot after the event
 {
 	"classname" "prop_dynamic"
 	"origin" "-8573 -2336 388"
@@ -1181,6 +1112,7 @@ add:
 	"solid" "6"
 	"disableshadows" "1"
 }
+; --- Van by the end saferoom
 {
 	"classname" "prop_dynamic"
 	"origin" "-7660 -3913 384"
@@ -1200,8 +1132,8 @@ add:
 ; --- Block LOS under van
 {
 	"classname" "logic_auto"
-	"OnMapSpawn" "anv_mapfixes_losfix_extra_van,AddOutput,mins -66 -3 -12,0,-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_extra_van,AddOutput,maxs 66 3 12,0,-1"
+	"OnMapSpawn" "anv_mapfixes_losfix_extra_van,AddOutput,mins -66 -1 -12,0,-1"
+	"OnMapSpawn" "anv_mapfixes_losfix_extra_van,AddOutput,maxs 66 1 12,0,-1"
 	"OnMapSpawn" "anv_mapfixes_losfix_extra_van,AddOutput,solid 2,0,-1"
 }
 {
