--- a/cfg/stripper/maps/c2m2_fairgrounds.cfg
+++ b/cfg/stripper/maps/c2m2_fairgrounds.cfg
@@ -1030,7 +1030,7 @@ add:
 	"model" "models/props_urban/carnival_sign003.mdl"
 	"solid" "6"
 	"disableshadows" "1"
-	"rendercolor" "22 202 254"
+	"rendercolor" "0 180 246"
 }
 ; --- Add collision to sign and block LOS 
 {
@@ -1826,6 +1826,17 @@ add:
 	"angles" "0 0 0"
 	"model" "*37"
 	"normal.x" "-1.00"
+	"normal.y" "0.00"
+	"normal.z" "0.00"
+	"team" "2"
+}
+; --- Infected ladder to climb up the platform at the top of the slide
+{
+	"classname" "func_simpleladder"
+	"origin" "-5921.5 -1752 76"
+	"angles" "0 0 0"
+	"model" "*192"
+	"normal.x" "1.00"
 	"normal.y" "0.00"
 	"normal.z" "0.00"
 	"team" "2"
