--- a/cfg/stripper/maps/c3m1_plankcountry.cfg
+++ b/cfg/stripper/maps/c3m1_plankcountry.cfg
@@ -263,6 +263,24 @@ add:
 	"initialstate" "1"
 	"BlockType" "0"
 }
+; --- Prevent getting stuck on top of the photocopier in the store by the event
+{
+	"classname" "env_physics_blocker"
+	"origin" "-6240 6629 205"
+	"mins" "-24 -17 -30"
+	"maxs" "24 17 30"
+	"initialstate" "1"
+	"BlockType" "0"
+}
+; --- Prevent a stuck spot on the radiator in the store by the event
+{
+	"classname" "env_physics_blocker"
+	"origin" "-6216 6550.5 212"
+	"mins" "-4 -30.5 -4"
+	"maxs" "4 30.5 4"
+	"initialstate" "1"
+	"BlockType" "0"
+}
 
 ; =====================================================
 ; ==                 NUISANCE CHANGES                ==
