--- a/cfg/stripper/maps/c3m3_shantytown.cfg
+++ b/cfg/stripper/maps/c3m3_shantytown.cfg
@@ -2161,7 +2161,7 @@ add:
 ; --- Re-add Valve's blockers copied directly from c3m3_shantytown_commentary.txt, excluding the ones we don't want
 ; --- Block above second fire barrel
 ;{
-;	"classname" "env_player_blocker"
+;	"classname" "env_physics_blocker"
 ;	"BlockType" "1"
 ;	"initialstate" "1"
 ;	"maxs" "64 64 256"
@@ -2171,7 +2171,7 @@ add:
 ;}
 ; --- Block above roof corner by second fire barrel
 ;{
-;	"classname" "env_player_blocker"
+;	"classname" "env_physics_blocker"
 ;	"BlockType" "1"
 ;	"initialstate" "1"
 ;	"maxs" "96 12 16"
