--- a/cfg/stripper/maps/c4m2_sugarmill_a.cfg
+++ b/cfg/stripper/maps/c4m2_sugarmill_a.cfg
@@ -1310,7 +1310,7 @@ add:
 	"origin" "208 -6112 359"
 	"mapupdate" "1"
 }
-; --- Block survivors from jumping up top in the grinder area - REMOVED
+; --- Block survivors from jumping up top in the grinder area - REMOVED, replaced with own clips
 ;{
 ;	"classname" "env_physics_blocker"
 ;	"BlockType" "1"
@@ -1339,7 +1339,7 @@ add:
 	"origin" "-1535 -9144.59 614.604"
 	"mapupdate" "1"
 }
-; --- Block jesus spot on spools by the 2 silos
+; --- Block jesus spot on spools by the 2 silos - REMOVED, nav fixes vscript fixes jesus spot here, so no need to replace this
 ;{
 ;	"classname" "env_physics_blocker"
 ;	"BlockType" "1"
