--- a/cfg/stripper/maps/c4m3_sugarmill_b.cfg
+++ b/cfg/stripper/maps/c4m3_sugarmill_b.cfg
@@ -1335,7 +1335,7 @@ add:
 	"origin" "208 -6112 359"
 	"mapupdate" "1"
 }
-; --- Block survivors from jumping up top in the grinder area - REMOVED
+; --- Block survivors from jumping up top in the grinder area - REMOVED, replaced with own clips
 ;{
 ;	"classname" "env_physics_blocker"
 ;	"BlockType" "1"
@@ -1364,7 +1364,7 @@ add:
 	"origin" "-1535 -9144.59 614.604"
 	"mapupdate" "1"
 }
-; --- Block jesus spot on spools by the 2 silos
+; --- Block jesus spot on spools by the 2 silos - REMOVED, nav fixes vscript fixes jesus spot here, so no need to replace this
 ;{
 ;	"classname" "env_physics_blocker"
 ;	"BlockType" "1"
@@ -1376,7 +1376,7 @@ add:
 ;	"mapupdate" "1"
 ;}
 ; --- Add in clips that were only included in map 2 by Valve
-; --- Block survivors from standing on the outside of the elevator building by the 2 silos - REMOVED
+; --- Block survivors from standing on the outside of the elevator building by the 2 silos - REMOVED, replaced by TLS clip
 ;{
 ;	"classname" "env_physics_blocker"
 ;	"BlockType" "1"
