--- a/cfg/stripper/maps/c4m4_milltown_b.cfg
+++ b/cfg/stripper/maps/c4m4_milltown_b.cfg
@@ -230,6 +230,17 @@ add:
 	"spawnflags" "2"
 	"count" "5"
 }
+; --- Ammo pile on porch by the raised up house at the end of the street
+{
+	"classname" "weapon_ammo_spawn"
+	"origin" "1035 6301 120.5"
+	"angles" "0 0 0"
+	"model" "models/props/terror/ammo_stack.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+	"spawnflags" "2"
+	"count" "5"
+}
 ; --- Ammo pile on tarp covered boxes by the treehouse
 {
 	"classname" "weapon_ammo_spawn"
@@ -1053,6 +1064,123 @@ add:
 	; --- Replace blocker on fence by garage sale
 	"OnMapSpawn" "anv_mapfixes_treehouse_whitefence,Kill,,15,-1"
 }
+; --- Remove Valve's commentary blockers so we can replace them with our own
+add:
+{
+	"classname" "logic_auto"
+	"OnMapSpawn" "env_player_blocker,Kill,,15,-1"
+}
+; --- Re-add Valve's blockers copied directly from c4m4_milltown_b_commentary.txt, excluding the ones we don't want
+; --- Block players standing on shrubs around the edge of the map - CHANGED, now only blocks survivors
+{
+	"classname" "env_physics_blocker"
+	"initialstate" "1"
+	"maxs" "50 1200 3000"
+	"mins" "-50 -52 -80"
+	"origin" "-957.801 3798.52 351.499"
+	"mapupdate" "1"
+	"BlockType" "1"
+}
+{
+	"classname" "env_physics_blocker"
+	"initialstate" "1"
+	"maxs" "50 300 2000"
+	"mins" "-50 -52 -80"
+	"origin" "-2852.78 5296.57 290.201"
+	"mapupdate" "1"
+	"BlockType" "1"
+}
+{
+	"classname" "env_physics_blocker"
+	"initialstate" "1"
+	"maxs" "50 1000 2000"
+	"mins" "-50 -52 -80"
+	"origin" "-2948.78 5232.57 290.201"
+	"mapupdate" "1"
+	"BlockType" "1"
+}
+; --- Block players from getting stuck under a boat on the street
+{
+	"classname" "env_physics_blocker"
+	"BlockType" "0"
+	"initialstate" "1"
+	"maxs" "0 0 60"
+	"mins" "-25 -25 0"
+	"origin" "957.262 5780.71 107.593"
+	"mapupdate" "1"
+}
+{
+	"classname" "env_physics_blocker"
+	"BlockType" "0"
+	"initialstate" "1"
+	"maxs" "0 0 60"
+	"mins" "-25 -25 0"
+	"origin" "917.262 5840.71 107.593"
+	"mapupdate" "1"
+}
+; --- Clips outside the playable area - REMOVED
+;{
+;	"classname" "env_physics_blocker"
+;	"initialstate" "1"
+;	"maxs" "400 200 3000"
+;	"mins" "-500 -528 -80"
+;	"origin" "-7580.84 6948.33 -303"
+;	"mapupdate" "1"
+;}
+;{
+;	"classname" "env_physics_blocker"
+;	"BlockType" "1"
+;	"initialstate" "1"
+;	"maxs" "275 200 3000"
+;	"mins" "-50 -150 0"
+;	"origin" "-6376 6720 265.496"
+;	"mapupdate" "1"
+;}
+;{
+;	"classname" "env_physics_blocker"
+;	"BlockType" "1"
+;	"initialstate" "1"
+;	"maxs" "275 200 3000"
+;	"mins" "-50 -150 0"
+;	"origin" "-4840 6800 281.496"
+;	"mapupdate" "1"
+;}
+;{
+;	"classname" "env_physics_blocker"
+;	"BlockType" "1"
+;	"initialstate" "1"
+;	"maxs" "350 300 3000"
+;	"mins" "0 -100 0"
+;	"origin" "-7144 8120 249.496"
+;	"mapupdate" "1"
+;}
+;{
+;	"classname" "env_physics_blocker"
+;	"BlockType" "1"
+;	"initialstate" "1"
+;	"maxs" "300 200 3000"
+;	"mins" "-50 -120 0"
+;	"origin" "-4800 8480 281.496"
+;	"mapupdate" "1"
+;}
+;{
+;	"classname" "env_physics_blocker"
+;	"BlockType" "1"
+;	"initialstate" "1"
+;	"maxs" "300 200 3000"
+;	"mins" "-50 -120 0"
+;	"origin" "-5520 7936 281.496"
+;	"mapupdate" "1"
+;}
+;{
+;	"classname" "env_physics_blocker"
+;	"BlockType" "1"
+;	"initialstate" "1"
+;	"maxs" "200 200 3000"
+;	"mins" "0 -100 0"
+;	"origin" "-6900.06 7183.3 249.496"
+;	"mapupdate" "1"
+;}
 
 ; =====================================================
 ; ==              TRIGGER REMOVAL / FIX              ==
