--- a/cfg/stripper/maps/c5m1_waterfront.cfg
+++ b/cfg/stripper/maps/c5m1_waterfront.cfg
@@ -713,6 +713,27 @@ add:
 	"normal.z" "0.00"
 	"team" "2"
 }
+; --- Infected ladders to climb over the wall at the restaurant exit
+{
+	"classname" "func_simpleladder"
+	"origin" "-111.5 2106 -8"
+	"angles" "0 0 0"
+	"model" "*27"
+	"normal.x" "1.00"
+	"normal.y" "0.00"
+	"normal.z" "0.00"
+	"team" "2"
+}
+{
+	"classname" "func_simpleladder"
+	"origin" "-6304.5 -2353 -8"
+	"angles" "0 180 0"
+	"model" "*27"
+	"normal.x" "-1.00"
+	"normal.y" "0.00"
+	"normal.z" "0.00"
+	"team" "2"
+}
 ; --- Infected ladder to stop players getting perma-stuck behind a fence next to the end saferoom
 {
 	"classname" "func_simpleladder"
