--- a/cfg/stripper/maps/c5m2_park.cfg
+++ b/cfg/stripper/maps/c5m2_park.cfg
@@ -205,6 +205,17 @@ filter:
 ; ==                STATIC AMMO PILES                ==
 ; ==          Add or modify ammo pile spawns         ==
 ; =====================================================
+add:
+{
+	"classname" "weapon_ammo_spawn"
+	"origin" "-9757 -5924 -219"
+	"angles" "0 0 0"
+	"model" "models/props/terror/ammo_stack.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+	"spawnflags" "2"
+	"count" "5"
+}
 
 ; =====================================================
 ; ==                 HITTABLE CHANGES                ==
