--- a/cfg/stripper/maps/c5m3_cemetery.cfg
+++ b/cfg/stripper/maps/c5m3_cemetery.cfg
@@ -179,6 +179,27 @@ modify:
 ; ==                 HITTABLE CHANGES                ==
 ; ==           Add/remove/modify hittables           ==
 ; =====================================================
+add:
+; --- Hittable car behind the fence outside the saferoom
+{
+	"classname" "prop_physics"
+	"origin" "5693 8583 110"
+	"angles" "0 0 15"
+	"model" "models/props_vehicles/cara_82hatchback_wrecked.mdl"
+	"solid" "6"
+	"fadescale" "0"
+	"targetname" "hittable_car_underpass"
+	"rendercolor" "70 53 40"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "5693 8583 110"
+	"angles" "0 0 15"
+	"model" "models/props_vehicles/cara_82hatchback_wrecked_glass.mdl"
+	"solid" "6"
+	"fadescale" "0"
+	"parentname" "hittable_car_underpass"
+}
 
 
 ; #############  MAP CLIPPING AND ISSUES  #############
@@ -187,15 +208,74 @@ modify:
 ; ==      Block intentionally performed exploits     ==
 ; =====================================================
 add:
-; --- Block survivors from standing on the fence by the saferoom
+; --- Block survivors from standing on the fence by the saferoom - Replaced until angled clip bug fixed (#34)
+;{
+;	"classname" "env_physics_blocker"
+;	"origin" "6092 8456 404"
+;	"angles" "0 -5.5 0"
+;	"mins" "-116 -4 -236"
+;	"maxs" "116 4 236"
+;	"boxmins" "-116 -4 -236"
+;	"boxmaxs" "116 4 236"
+;	"initialstate" "1"
+;	"BlockType" "1"
+;}
 {
 	"classname" "env_physics_blocker"
-	"origin" "6092 8456 404"
+	"origin" "6072 8456 58"
 	"angles" "0 -5.5 0"
-	"mins" "-116 -4 -236"
-	"maxs" "116 4 236"
-	"boxmins" "-116 -4 -236"
-	"boxmaxs" "116 4 236"
+	"mins" "-136 -4 -90"
+	"maxs" "136 4 90"
+	"boxmins" "-136 -4 -90"
+	"boxmaxs" "136 4 90"
+	"initialstate" "1"
+	"BlockType" "1"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "6180 8446 412"
+	"mins" "-28 -7 -228"
+	"maxs" "28 7 228"
+	"initialstate" "1"
+	"BlockType" "1"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "6124 8451 412"
+	"mins" "-28 -7 -228"
+	"maxs" "28 7 228"
+	"initialstate" "1"
+	"BlockType" "1"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "6068 8456 412"
+	"mins" "-28 -7 -228"
+	"maxs" "28 7 228"
+	"initialstate" "1"
+	"BlockType" "1"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "6012 8462 412"
+	"mins" "-28 -7 -228"
+	"maxs" "28 7 228"
+	"initialstate" "1"
+	"BlockType" "1"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "5970 8467 412"
+	"mins" "-14 -7 -228"
+	"maxs" "14 7 228"
+	"initialstate" "1"
+	"BlockType" "1"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "5946 8470 412"
+	"mins" "-10 -7 -228"
+	"maxs" "10 7 228"
 	"initialstate" "1"
 	"BlockType" "1"
 }
