--- a/cfg/stripper/maps/c5m4_quarter.cfg
+++ b/cfg/stripper/maps/c5m4_quarter.cfg
@@ -279,6 +279,39 @@ add:
 	"targetname" "anv_mapfixes_duckqol_pool_room_stuck"
 	"spawnflags" "2049"
 }
+; --- Block stuck spots on out of bounds roofs by the final street
+{
+	"classname" "env_physics_blocker"
+	"origin" "-3489 -1376 345"
+	"mins" "-255 -96 -58"
+	"maxs" "255 96 58"
+	"initialstate" "1"
+	"BlockType" "0"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "-3752 -1280 367"
+	"mins" "-8 -96 -80"
+	"maxs" "8 96 80"
+	"initialstate" "1"
+	"BlockType" "0"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "-4033 -1328 534"
+	"mins" "-63 -271 -78"
+	"maxs" "63 271 78"
+	"initialstate" "1"
+	"BlockType" "0"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "-4030 -448 464"
+	"mins" "-2 -152 -48"
+	"maxs" "2 152 48"
+	"initialstate" "1"
+	"BlockType" "0"
+}
 
 ; =====================================================
 ; ==                 NUISANCE CHANGES                ==
@@ -331,6 +364,80 @@ add:
 	"maxs" "13 6 7"
 	"initialstate" "1"
 	"BlockType" "0"
+}
+; --- Solidify non-solid windows on roofs
+; --- Commented out inaccessible ones behind clips
+;{
+;	"classname" "prop_dynamic"
+;	"origin" "-2314 2429 580"
+;	"angles" "0 180 0"
+;	"model" "models/props_downtown/dormer_window02.mdl"
+;	"solid" "6"
+;	"disableshadows" "1"
+;	"rendermode" "10"
+;}
+;{
+;	"classname" "prop_dynamic"
+;	"origin" "-1686 2429 580"
+;	"angles" "0 180 0"
+;	"model" "models/props_downtown/dormer_window02.mdl"
+;	"solid" "6"
+;	"disableshadows" "1"
+;	"rendermode" "10"
+;}
+{
+	"classname" "prop_dynamic"
+	"origin" "-876 -213 561"
+	"angles" "0 180 0"
+	"model" "models/props_downtown/dormer_window02.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+	"rendermode" "10"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-1164 -213 561"
+	"angles" "0 180 0"
+	"model" "models/props_downtown/dormer_window02.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+	"rendermode" "10"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-952 -616 561"
+	"angles" "0 0 0"
+	"model" "models/props_downtown/dormer_window02.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+	"rendermode" "10"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-1240 -616 561"
+	"angles" "0 0 0"
+	"model" "models/props_downtown/dormer_window02.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+	"rendermode" "10"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-3330 -1101 287"
+	"angles" "0 180 0"
+	"model" "models/props_downtown/dormer_window02.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+	"rendermode" "10"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-3586 -1101 287"
+	"angles" "0 180 0"
+	"model" "models/props_downtown/dormer_window02.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+	"rendermode" "10"
 }
 ; --- Allow infected into the breakable rooms at the event drop at all times
 {
