--- a/cfg/stripper/maps/c8m3_sewers.cfg
+++ b/cfg/stripper/maps/c8m3_sewers.cfg
@@ -269,6 +269,18 @@ add:
 	"initialstate" "1"
 	"BlockType" "2"
 }
+; --- Prevent a stuck spot on a desk in the warehouse offices
+{
+	"classname" "env_physics_blocker"
+	"origin" "10965 7047 209"
+	"angles" "0 345 0"
+	"mins" "-15 -39 -16"
+	"maxs" "15 39 16"
+	"boxmins" "-15 -39 -16"
+	"boxmaxs" "15 39 16"
+	"initialstate" "1"
+	"BlockType" "0"
+}
 
 ; =====================================================
 ; ==                 NUISANCE CHANGES                ==
@@ -571,7 +583,7 @@ add:
 ; --- Blocks survivors from leaving the map if tank-punched on top of the gas station - REMOVED, also blocked infected
 ;{
 ;	"id" "8664375"
-;	"classname" "env_player_blocker"
+;	"classname" "env_physics_blocker"
 ;	"BlockType" "0"
 ;	"initialstate" "1"
 ;	"maxs" "44 556 780"
@@ -592,7 +604,7 @@ add:
 ; --- Blocks survivors from jumping from the lift to a window ledge - REPLACED
 ;{
 ;	"id" "8665431"
-;	"classname" "env_player_blocker"
+;	"classname" "env_physics_blocker"
 ;	"BlockType" "1"
 ;	"initialstate" "1"
 ;	"maxs" "4 33 107"
