--- a/cfg/stripper/maps/c4m1_milltown_a.cfg
+++ b/cfg/stripper/maps/c4m1_milltown_a.cfg
@@ -226,6 +226,17 @@ add:
 	"spawnflags" "2"
 	"count" "5"
 }
+; --- Ammo pile on porch by the raised up house at the end of the street
+{
+	"classname" "weapon_ammo_spawn"
+	"origin" "1035 6301 120.5"
+	"angles" "0 0 0"
+	"model" "models/props/terror/ammo_stack.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+	"spawnflags" "2"
+	"count" "5"
+}
 ; --- Ammo pile on tarp covered boxes by the treehouse
 {
 	"classname" "weapon_ammo_spawn"
@@ -261,20 +272,29 @@ add:
 }
 {
 	"classname" "env_physics_blocker"
-	"origin" "-5846 8536 818"
-	"angles" "0 7 0"
-	"mins" "-40 -140 -454"
-	"maxs" "40 140 454"
-	"boxmins" "-40 -140 -454"
-	"boxmaxs" "40 140 454"
-	"initialstate" "1"
-	"BlockType" "1"
-}
-{
-	"classname" "env_physics_blocker"
 	"origin" "-6016 8768 706"
 	"mins" "-128 -96 -454"
 	"maxs" "128 96 454"
+	"initialstate" "1"
+	"BlockType" "1"
+}
+; --- Replace angled clip until angled clip bug is fixed (#34)
+;{
+;	"classname" "env_physics_blocker"
+;	"origin" "-5846 8536 818"
+;	"angles" "0 7 0"
+;	"mins" "-40 -140 -454"
+;	"maxs" "40 140 454"
+;	"boxmins" "-40 -140 -454"
+;	"boxmaxs" "40 140 454"
+;	"initialstate" "1"
+;	"BlockType" "1"
+;}
+{
+	"classname" "env_physics_blocker"
+	"origin" "-5848 8556 794"
+	"mins" "-56 -132 -454"
+	"maxs" "56 132 454"
 	"initialstate" "1"
 	"BlockType" "1"
 }
@@ -1124,6 +1144,8 @@ add:
 	"classname" "logic_auto"
 	; --- Replace broken blocker on generator by burger tank causing physics issues
 	"OnMapSpawn" "anv_mapfixes_booster_ginnyjon,Kill,,15,-1"
+	; --- Angled clip on top of generator (can be re-enabled if angled blockers get fixed) (#34), replaced with existing Valve commentary blocker
+	"OnMapSpawn" "anv_mapfixes_booster_ginnytop,Kill,,15,-1"
 	; --- Replace blocker on fence by garage sale
 	"OnMapSpawn" "anv_mapfixes_treehouse_whitefence,Kill,,15,-1"
 }
@@ -1136,6 +1158,248 @@ add:
 	"maxs" "6 4 0"
 	"boxmins" "-10 -4 -284"
 	"boxmaxs" "6 4 0"
+	"initialstate" "1"
+	"BlockType" "1"
+}
+; --- Block survivors from jumping on top of the generator lights - Replacement for anv_mapfixes_booster_ginnytop, modified Z from c4m5_milltown_escape_commentary.txt
+{
+	"id" "14000"
+	"classname" "env_physics_blocker"
+	"BlockType" "1"
+	"initialstate" "1"
+	"maxs" "58 58 1180"
+	"mins" "-4 -8 -8"
+	"origin" "-5451 6765 386.06"
+	"mapupdate" "1"
+}
+; --- Remove Valve's commentary blockers so we can replace them with our own
+add:
+{
+	"classname" "logic_auto"
+	"OnMapSpawn" "env_player_blocker,Kill,,15,-1"
+}
+; --- Re-add Valve's blockers copied directly from c4m1_milltown_a_commentary.txt, excluding the ones we don't want
+; --- Block jesus spot on table in the burger tank - REMOVED, nav fixes vscript fixes jesus spot here, so no need to replace this
+;{
+;	"id" "13567"
+;	"classname" "env_physics_blocker"
+;	"BlockType" "1"
+;	"initialstate" "1"
+;	"maxs" "24 56 144"
+;	"mins" "-58 -8 -72"
+;	"origin" "-5840 7132 136"
+;	"mapupdate" "1"
+;}
+; --- Block players going past the kill trigger in the water at the docks
+{
+	"classname" "env_physics_blocker"
+	"initialstate" "1"
+	"maxs" "400 200 3000"
+	"mins" "-500 -528 -80"
+	"origin" "-7580.84 6948.33 -303"
+	"mapupdate" "1"
+	"BlockType" "0"
+}
+; --- Block survivors from standing on trees by the burger tank
+; --- Tree to right of burger tank - REPLACED
+;{
+;	"classname" "env_physics_blocker"
+;	"BlockType" "1"
+;	"initialstate" "1"
+;	"maxs" "275 200 3000"
+;	"mins" "-50 -150 0"
+;	"origin" "-6376 6720 265.496"
+;	"mapupdate" "1"
+;}
+; --- Tree by the semi truck - REPLACED
+;{
+;	"classname" "env_physics_blocker"
+;	"BlockType" "1"
+;	"initialstate" "1"
+;	"maxs" "275 200 3000"
+;	"mins" "-50 -150 0"
+;	"origin" "-4840 6800 281.496"
+;	"mapupdate" "1"
+;}
+{
+	"classname" "env_physics_blocker"
+	"BlockType" "1"
+	"initialstate" "1"
+	"maxs" "350 300 3000"
+	"mins" "0 -100 0"
+	"origin" "-7144 8120 249.496"
+	"mapupdate" "1"
+}
+{
+	"classname" "env_physics_blocker"
+	"BlockType" "1"
+	"initialstate" "1"
+	"maxs" "300 200 3000"
+	"mins" "-50 -120 0"
+	"origin" "-4800 8480 281.496"
+	"mapupdate" "1"
+}
+{
+	"classname" "env_physics_blocker"
+	"BlockType" "1"
+	"initialstate" "1"
+	"maxs" "300 200 3000"
+	"mins" "-50 -120 0"
+	"origin" "-5520 7936 281.496"
+	"mapupdate" "1"
+}
+{
+	"classname" "env_physics_blocker"
+	"BlockType" "1"
+	"initialstate" "1"
+	"maxs" "200 200 3000"
+	"mins" "0 -100 0"
+	"origin" "-6900.06 7183.3 249.496"
+	"mapupdate" "1"
+}
+; --- Block players standing on shrubs around the edge of the map - CHANGED, now only blocks survivors
+{
+	"classname" "env_physics_blocker"
+	"initialstate" "1"
+	"maxs" "50 1200 3000"
+	"mins" "-50 -52 -80"
+	"origin" "-957.801 3798.52 351.499"
+	"mapupdate" "1"
+	"BlockType" "1"
+}
+{
+	"classname" "env_physics_blocker"
+	"initialstate" "1"
+	"maxs" "50 300 2000"
+	"mins" "-50 -52 -80"
+	"origin" "-2852.78 5296.57 290.201"
+	"mapupdate" "1"
+	"BlockType" "1"
+}
+{
+	"classname" "env_physics_blocker"
+	"initialstate" "1"
+	"maxs" "50 1000 2000"
+	"mins" "-50 -52 -80"
+	"origin" "-2948.78 5232.57 290.201"
+	"mapupdate" "1"
+	"BlockType" "1"
+}
+; --- Block players from getting stuck under a boat on the street
+{
+	"classname" "env_physics_blocker"
+	"BlockType" "0"
+	"initialstate" "1"
+	"maxs" "0 0 60"
+	"mins" "-25 -25 0"
+	"origin" "957.262 5780.71 107.593"
+	"mapupdate" "1"
+}
+{
+	"classname" "env_physics_blocker"
+	"BlockType" "0"
+	"initialstate" "1"
+	"maxs" "0 0 60"
+	"mins" "-25 -25 0"
+	"origin" "917.262 5840.71 107.593"
+	"mapupdate" "1"
+}
+; --- Replacement clips on trees
+; --- Tree to right of burger tank
+{
+	"classname" "env_physics_blocker"
+	"origin" "-6257 6827 984"
+	"mins" "-37 -93 -552"
+	"maxs" "37 93 552"
+	"initialstate" "1"
+	"BlockType" "1"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "-6306 6705 928"
+	"mins" "-97 -29 -608"
+	"maxs" "97 29 608"
+	"initialstate" "1"
+	"BlockType" "1"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "-6319 6626 956"
+	"mins" "-18 -51 -580"
+	"maxs" "18 51 580"
+	"initialstate" "1"
+	"BlockType" "1"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "-6222 6660 960"
+	"mins" "-79 -16 -576"
+	"maxs" "79 16 576"
+	"initialstate" "1"
+	"BlockType" "1"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "-6158 6735 928"
+	"mins" "-51 -38 -608"
+	"maxs" "51 38 608"
+	"initialstate" "1"
+	"BlockType" "1"
+}
+; --- Tree by the semi truck
+{
+	"classname" "env_physics_blocker"
+	"origin" "-4802 6801 984"
+	"mins" "-24 -11 -552"
+	"maxs" "24 11 552"
+	"initialstate" "1"
+	"BlockType" "1"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "-4803 6893 952"
+	"mins" "-26 -15 -584"
+	"maxs" "26 15 584"
+	"initialstate" "1"
+	"BlockType" "1"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "-4757 6887 952"
+	"mins" "-21 -112 -584"
+	"maxs" "21 112 584"
+	"initialstate" "1"
+	"BlockType" "1"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "-4708 6819 956"
+	"mins" "-29 -23 -580"
+	"maxs" "29 23 580"
+	"initialstate" "1"
+	"BlockType" "1"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "-4681 6776 936"
+	"mins" "-55 -20 -604"
+	"maxs" "55 20 604"
+	"initialstate" "1"
+	"BlockType" "1"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "-4653 6739 940"
+	"mins" "-18 -18 -596"
+	"maxs" "18 18 596"
+	"initialstate" "1"
+	"BlockType" "1"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "-4738 6733 932"
+	"mins" "-23 -53 -604"
+	"maxs" "23 53 640"
 	"initialstate" "1"
 	"BlockType" "1"
 }
